--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
     </ul>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
+
 </body>
 </html>
